# pragma_v1

./: .gitignore  LICENSE  README.md  build.sh  creation.md  go.mod  go.sum  install.ps1  install.sh  restart.sh  spec.md
.commandcode/taste/: taste.md
.github/workflows/: ci.yml  release.yml
cmd/pragma/: clean.go  doctor.go  main.go  publish.go  setup.go  upgrade.go
cmd/pragma-smoke/: main.go
daemon/: bootstrap.sh  pyproject.toml
daemon/pragma_daemon/: __main__.py  cache.py  code_generator.py  conformance.py  deepseek.py  groq_client.py  main.py  methods.py  openai_compat.py  research.py  rpc.py  spec_compiler.py  spec_validator.py
daemon/scripts/: test_live_apis.py
daemon/tests/: test_cache.py  test_conformance.py  test_coverage_gate.py  test_deepseek.py  test_groq_client.py  test_methods_integration.py  test_new_rpcs.py  test_research.py  test_spec_compiler.py  test_spec_validator.py
internal/budget/: ledger.go  ledger_test.go  oracle.go  oracle_test.go
internal/config/: config.go  config_test.go  profile_router.go  profile_router_test.go  profiles.go  profiles_test.go  setup.go
internal/daemon/: client.go  health.go  lifecycle.go  lifecycle_unix.go  lifecycle_windows.go
internal/keyvault/: keyring.go  keyring_test.go
internal/pipeline/: checkpoint.go  events.go  service.go  service_test.go  state.go
internal/server/: actions.go  handlers.go  handlers_test.go  hub.go  interview.go  preview.go  (+2 more)
scripts/: bootstrap-daemon.ps1  bootstrap-daemon.sh  e2e_run.sh
web/: embed.go  package-lock.json  package.json  svelte.config.js  vite.config.ts
(+48 files in other folders)
