[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pragma-daemon"
version = "0.1.0"
description = "Pragma AI Daemon"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "duckduckgo-search>=6.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-go>=0.23",
    "tenacity>=8.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
